--- a/style/style.css
+++ b/style/style.css
@@ -396,6 +396,7 @@ figure button {
     font-size: 20px;
     font-family: 'Roboto Condensed', sans-serif;
     text-align: justify;
+    line-height: 150%;
 }
 
 .marsDescription{
@@ -449,6 +450,7 @@ figure button {
     font-size: 20px;
     font-family: 'Roboto Condensed', sans-serif;
     text-align: justify;
+    line-height: 150%;
 }
 
 .jupiterDescription{
